# nging

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
include/engine/: core.h  lua_bindings.h  time.h
lua/scripts/: README.md  bullet.lua  camera.lua  config.lua  debug.lua  enemy.lua  event.lua  game.lua  input.lua  main.lua  menu.lua  particle.lua  pause.lua  player.lua  pool.lua  powerup.lua  scores.lua  weapon_select.lua  weapons.lua
lua/scripts/typings/: engine.lua
src/: lua_bindings.c  main.c
src/engine/: core.c  lua_engine.c  time.c
